--- a/nodejs/memory.html
+++ b/nodejs/memory.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="app"><div class="page"><header class="page-header"><h1>M.X</h1></header><main class="page-main"><div style="position:relative;"><div><h1 id="nodejs-内存学习" tabindex="-1">Nodejs 内存学习 <a class="header-anchor" href="#nodejs-内存学习" aria-hidden="true">#</a></h1><p><img src="/assets/node_mem.ddf5f3ed.png" alt=""></p></div></div></main></div></div>
-    <script>__VP_HASH_MAP__ = JSON.parse("{\"index.md\":\"8b967e31\",\"nodejs_memory.md\":\"2e550f1a\",\"problem.md\":\"53c89487\",\"vite.md\":\"a0f05bd4\",\"webpack.md\":\"707140a4\"}")</script>
+    <script>__VP_HASH_MAP__ = JSON.parse("{\"index.md\":\"8b967e31\",\"nodejs_memory.md\":\"2e550f1a\",\"problem.md\":\"53c89487\",\"vite.md\":\"a0f05bd4\",\"vue_reactive_index.md\":\"de39c8fc\",\"webpack.md\":\"5299a562\"}")</script>
     <script type="module" async src="/assets/app.adfffae8.js"></script>
     
   </body>
